# llm-chat-engine

./: .README.md.swp  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  context.py
app/api/routers/: chat.py  reset.py  upload.py
app/engine/: constants.py  context.py  generate.py  index.py  system_prompt.md
