[tool.poetry]
name = "llm-chat-engine"
version = "0.1.0"
description = ""
authors = ["George Fatouros <gfatouros@innov-acts.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
llama-index = "^0.10.41"
python-dotenv = "^1.0.1"
llama-index-vector-stores-redis = "^0.2.0"
redis = "^5.0.5"
llama-index-storage-chat-store-redis = "^0.1.3"
llama-index-readers-smart-pdf-loader = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
